--- a/src/css/style.css
+++ b/src/css/style.css
@@ -187,7 +187,7 @@ a.navbar-brand i {
 .slider-info {
     text-align: left;
     width: 600px;
-    margin-left: auto;
+    /* margin-left: auto; */
 }
 
 .slider-info h3 {
@@ -1445,3 +1445,17 @@ p.tit {
 }
 
 /* -- //Responsive code -- */
+
+
+.stats,
+.testimonials,
+.contact-wthree,
+.video-grid1666,
+.hide {
+	display: none;
+}
+
+.agileits-services-grids p {
+	line-height: normal;
+	margin: 0.6em 0;
+}
